@@ -5,11 +5,12 @@ auth.o: cups.h ipp.h http.h string.h ../config.h md5.h ppd.h file.h
 auth.o: language.h debug.h
 dest.o: cups.h ipp.h http.h string.h ../config.h md5.h ppd.h file.h
 dest.o: language.h
+dir.o: dir.h string.h ../config.h
 emit.o: ppd.h file.h string.h ../config.h
 encode.o: cups.h ipp.h http.h string.h ../config.h md5.h ppd.h file.h debug.h
 extended.o: ppd.h file.h string.h ../config.h debug.h
-file.o: ../cups/string.h ../config.h string.h ../cups/debug.h file-private.h
-file.o: file.h http-private.h http.h md5.h
+file.o: string.h ../config.h ../cups/debug.h file.h http-private.h http.h
+file.o: md5.h
 getputfile.o: cups.h ipp.h http.h string.h ../config.h md5.h ppd.h file.h
 getputfile.o: language.h debug.h
 http.o: http-private.h ../config.h http.h string.h md5.h debug.h
