@@ -30,7 +30,7 @@ include ../Makedefs
 # Object files...
 #
 
-LIBOBJS	=	attr.o auth.o dest.o emit.o encode.o extended.o \
+LIBOBJS	=	attr.o auth.o dest.o dir.o emit.o encode.o extended.o \
 		file.o getputfile.o http.o http-addr.o http-support.o \
 		ipp.o ipp-support.o langprintf.o language.o mark.o \
 		md5.o md5passwd.o normalize.o options.o page.o ppd.o \
@@ -43,8 +43,8 @@ OBJS	=	$(LIBOBJS) testhttp.o testi18n.o testipp.o testlang.o \
 # Header files to install...
 #
 
-HEADERS	=	cups.h http.h ipp.h language.h md5.h normalize.h ppd.h \
-		transcode.h
+HEADERS	=	cups.h dir.h file.h http.h ipp.h language.h md5.h \
+		normalize.h ppd.h transcode.h
 
 
 #
